--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <button onclick="copyEmail()" id="btnEmail" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-10 rounded-2xl shadow-lg transition-all flex items-center justify-center gap-2">
                         <i class="fa-solid fa-envelope"></i> Falar com Pâmela
                     </button>
-                    <a href="#" class="bg-slate-100 hover:bg-slate-200 text-slate-700 font-bold py-4 px-10 rounded-2xl transition-all flex items-center justify-center gap-2">
+                    <a href="https://www.linkedin.com/in/seuperfil" target="_blank" class="bg-slate-100 hover:bg-slate-200 text-slate-700 font-bold py-4 px-10 rounded-2xl transition-all flex items-center justify-center gap-2">
                         <i class="fa-brands fa-linkedin"></i> LinkedIn
                     </a>
                 </div>
