--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body class="bg-slate-50 text-slate-800 antialiased">
 
-    <!-- Header / Navbar Simulado -->
+    <!-- Cabeçalho -->
     <header class="gradient-bg text-white py-16 px-6 text-center relative overflow-hidden">
         <div class="absolute inset-0 opacity-10">
             <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
@@ -160,7 +160,7 @@
 
         </div>
 
-        <!-- Call to Action -->
+        <!-- Chamada para Ação (CTA) -->
         <div class="mt-20 relative">
             <div class="absolute inset-0 bg-indigo-600 rounded-3xl transform rotate-1 opacity-10"></div>
             <div class="relative bg-white border border-slate-200 p-10 rounded-3xl shadow-xl text-center">
@@ -170,7 +170,8 @@
                     <button onclick="copyEmail()" id="btnEmail" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-10 rounded-2xl shadow-lg transition-all flex items-center justify-center gap-2">
                         <i class="fa-solid fa-envelope"></i> Falar com Pâmela
                     </button>
-                    <a href="https://www.linkedin.com/in/seuperfil" target="_blank" class="bg-slate-100 hover:bg-slate-200 text-slate-700 font-bold py-4 px-10 rounded-2xl transition-all flex items-center justify-center gap-2">
+                    <!-- LINK DO LINKEDIN ATUALIZADO -->
+                    <a href="https://www.linkedin.com/in/pamela-coelhoo" target="_blank" class="bg-slate-100 hover:bg-slate-200 text-slate-700 font-bold py-4 px-10 rounded-2xl transition-all flex items-center justify-center gap-2">
                         <i class="fa-brands fa-linkedin"></i> LinkedIn
                     </a>
                 </div>
@@ -185,12 +186,13 @@
 
     <script>
         function copyEmail() {
-            const email = "pamela@conectati.com"; // Substitua pelo seu email real
+            // E-MAIL ATUALIZADO
+            const email = "pamelacoelho117@gmail.com"; 
             const dummy = document.createElement("textarea");
             document.body.appendChild(dummy);
             dummy.value = email;
             dummy.select();
-            document.execCommand("copy");
+            document.execCommand('copy');
             document.body.removeChild(dummy);
             
             const btn = document.getElementById('btnEmail');
